new ant target generate-ignore-files: call "ant generate-ignore-files" if you want to re-generate the ignore.txt files, populated with suggestions from the grammar files

--- a/trunk/JLanguageTool/build.xml
+++ b/trunk/JLanguageTool/build.xml
@@ -127,6 +127,14 @@
     </target>
 
     <!-- ================================================================== -->
+    <!-- Generate the "ignore.txt" files -->
+    <!-- ================================================================== -->
+    <target name="generate-ignore-files" depends="clean,init,build">
+        <java classname="org.languagetool.rules.spelling.SuggestionExtractor" fork="true"
+              classpath="${build.classes}:src" classpathref="common.classpath"/>
+    </target>
+
+    <!-- ================================================================== -->
     <!-- TEST -->
     <!-- ================================================================== -->
 
