print that hunspell version testing works on Windows only

--- a/trunk/JLanguageTool/build.xml
+++ b/trunk/JLanguageTool/build.xml
@@ -158,7 +158,7 @@
     </target>
 
     <target name="test-hunspell-libs">
-        <echo>Testing versions of hunspell libraries...</echo>
+        <echo>Testing versions of hunspell libraries (Windows only)...</echo>
         <exec failonerror="false" resultproperty="return.code" os="Windows XP Windows Vista Windows 7" dir="${src.java.dev.dir}/tools"
               outputproperty="return.message"
               executable="cscript">
