switch to Lucene 4.0 beta for the Wikipedia indexing. this also simplifies the code as no Query types are overwritten anymore.

--- a/trunk/JLanguageTool/.classpath
+++ b/trunk/JLanguageTool/.classpath
@@ -34,9 +34,12 @@
 	<classpathentry kind="lib" path="libs/bliki-3.0.3.jar"/>
 	<classpathentry kind="lib" path="libs/commons-lang-2.4.jar"/>
 	<classpathentry kind="lib" path="libs/commons-logging-1.1.1.jar"/>
-	<classpathentry kind="lib" path="libs/lucene-core-3.6.1.jar"/>
-	<classpathentry kind="lib" path="libs/lucene-queries-3.6.1.jar"/>
-	<classpathentry kind="lib" path="libs/lucene-test-framework-3.6.1.jar" sourcepath="C:/Users/user/.m2/repository/org/apache/lucene/lucene-test-framework/3.1.0/lucene-test-framework-3.1.0-sources.jar"/>
+	<classpathentry kind="lib" path="libs/lucene-test-framework-4.0.0-BETA.jar"/>
+	<classpathentry kind="lib" path="libs/randomizedtesting-runner-1.6.0.jar"/>
+	<classpathentry kind="lib" path="libs/lucene-core-4.0.0-BETA.jar"/>
+	<classpathentry kind="lib" path="libs/lucene-queries-4.0.0-BETA.jar"/>
+	<classpathentry kind="lib" path="libs/lucene-analyzers-common-4.0.0-BETA.jar"/>
+	<classpathentry kind="lib" path="libs/lucene-sandbox-4.0.0-BETA.jar"/>
 	<classpathentry kind="lib" path="libs/junit-4.7.jar"/>
 	<classpathentry kind="lib" path="libs/jakarta-regexp-1.4.jar"/>
 	<classpathentry kind="lib" path="libs/tika-core-0.9.jar"/>
