--- a/trunk/JLanguageTool/build.properties
+++ b/trunk/JLanguageTool/build.properties
@@ -46,10 +46,12 @@ ext.xmlsyntax.lib = ${ext.dir}/${xmlsyntax.lib}
 jna.lib = jna.jar
 ext.jna.lib = ${ext.dir}/${jna.lib}
 
-ext.lucene-core.lib = ${ext.dir}/lucene-core-3.6.1.jar
-ext.lucene-queries.lib = ${ext.dir}/lucene-queries-3.6.1.jar
-ext.lucene-test-framework.lib = ${ext.dir}/lucene-test-framework-3.6.1.jar
-ext.jakarta-regex.lib = ${ext.dir}/jakarta-regexp-1.4.jar
+ext.lucene-core.lib = ${ext.dir}/lucene-core-4.0.0-BETA.jar
+ext.lucene-queries.lib = ${ext.dir}/lucene-queries-4.0.0-BETA.jar
+ext.lucene-analyzers.lib = ${ext.dir}/lucene-analyzers-common-4.0.0-BETA.jar
+ext.lucene-sandbox.lib = ${ext.dir}/lucene-sandbox-4.0.0-BETA.jar
+ext.lucene-test-framework.lib = ${ext.dir}/lucene-test-framework-4.0.0-BETA.jar
+ext.lucene-random-testing.lib = ${ext.dir}/randomizedtesting-runner-1.6.0.jar
 
 ext.sweble.engine = ${ext.dir}/swc-engine-1.0.1-SNAPSHOT-jar-with-dependencies.jar
 ext.sweble.parser = ${ext.dir}/swc-parser-lazy-1.0.1-SNAPSHOT-jar-with-dependencies.jar
