--- a/trunk/JLanguageTool/build.xml
+++ b/trunk/JLanguageTool/build.xml
@@ -22,8 +22,10 @@
         <pathelement location="${ext.bliki.lib}" />
         <pathelement location="${ext.lucene-core.lib}" />
         <pathelement location="${ext.lucene-queries.lib}" />
+        <pathelement location="${ext.lucene-analyzers.lib}" />
+        <pathelement location="${ext.lucene-sandbox.lib}" />
         <pathelement location="${ext.lucene-test-framework.lib}" />
-        <pathelement location="${ext.jakarta-regex.lib}" />
+        <pathelement location="${ext.lucene-random-testing.lib}" />
         <pathelement location="${ext.segment.lib}" />
         <!-- -->
         <pathelement location="${ext.ictclas4j.lib}" />
@@ -520,6 +522,8 @@
         <copy file="${ext.commons-validator.lib}" todir="${dist.dir}" />
         <copy file="${ext.lucene-core.lib}" todir="${dist.dir}" />
         <copy file="${ext.lucene-queries.lib}" todir="${dist.dir}" />
+        <copy file="${ext.lucene-analyzers.lib}" todir="${dist.dir}" />
+        <copy file="${ext.lucene-sandbox.lib}" todir="${dist.dir}" />
         <copy file="${ext.jna.lib}" todir="${dist.dir}" />
 
 
