change classpath order: lucene test classes need to come before lucene-core

--- a/trunk/JLanguageTool/build.xml
+++ b/trunk/JLanguageTool/build.xml
@@ -20,11 +20,11 @@
         <pathelement location="${ext.logging.lib}" />
         <pathelement location="${ext.commons.lang.lib}" />
         <pathelement location="${ext.bliki.lib}" />
+        <pathelement location="${ext.lucene-test-framework.lib}" />  <!-- must come before lucene-core -->
         <pathelement location="${ext.lucene-core.lib}" />
         <pathelement location="${ext.lucene-queries.lib}" />
         <pathelement location="${ext.lucene-analyzers.lib}" />
         <pathelement location="${ext.lucene-sandbox.lib}" />
-        <pathelement location="${ext.lucene-test-framework.lib}" />
         <pathelement location="${ext.lucene-random-testing.lib}" />
         <pathelement location="${ext.segment.lib}" />
         <!-- -->
