[da] adding disambiguation.xml, fixes Sourceforge bug #3564113

--- a/trunk/JLanguageTool/build.xml
+++ b/trunk/JLanguageTool/build.xml
@@ -597,6 +597,7 @@
         <copy file="${resource.dir}/da/danish_tags.txt" todir="${dist.dir}/resource/da" />
         <copy file="${resource.dir}/da/danish.dict" todir="${dist.dir}/resource/da" />
         <copy file="${resource.dir}/da/danish.info" todir="${dist.dir}/resource/da" />
+        <copy file="${resource.dir}/da/disambiguation.xml" todir="${dist.dir}/resource/da" />
 
         <copy file="${resource.dir}/de/german.dict" todir="${dist.dir}/resource/de" />
         <copy file="${resource.dir}/de/german.info" todir="${dist.dir}/resource/de" />
