adapt to path changes

--- a/trunk/JLanguageTool/build.properties
+++ b/trunk/JLanguageTool/build.properties
@@ -3,9 +3,9 @@ debug = on
 version = 1.9-dev
 
 src.dir = ./src
-src.java.dir = ${src.dir}/java
-src.java.dev.dir = ${src.dir}/dev
-src.test.dir = ${src.dir}/test
+src.java.dir = ${src.dir}/main/java
+src.java.dev.dir = ${src.dir}/main/dev
+src.test.dir = ${src.dir}/test/java
 src.scripts.dir = ${src.dir}/scripts
 
 build.classes = ${build.dir}/classes
@@ -19,7 +19,8 @@ dist.javadocs = ${dist.dir}/docs/api
 
 junit.classes.dir = ./junit.classes
 junit.instrumented-classes.dir = ./junit.instrumented-classes
-resource.dir = ./src/resource
+resource.dir = ./src/main/resources/resource
+rules.dir = ./src/main/resources/rules
 
 ext.dir = ./libs
 ext.ooo.dir = ./libs/ooo
