move i18n files to resources

--- a/trunk/JLanguageTool/build.properties
+++ b/trunk/JLanguageTool/build.properties
@@ -19,7 +19,8 @@ dist.javadocs = ${dist.dir}/docs/api
 
 junit.classes.dir = ./junit.classes
 junit.instrumented-classes.dir = ./junit.instrumented-classes
-resource.dir = ./src/main/resources/resource
+resource.dir = ./src/main/resources
+lang.resource.dir = ${resource.dir}/resource
 rules.dir = ./src/main/resources/rules
 
 ext.dir = ./libs
