adapt files and tests to resources moved below org.languagetool

--- a/trunk/JLanguageTool/build.properties
+++ b/trunk/JLanguageTool/build.properties
@@ -20,8 +20,8 @@ dist.javadocs = ${dist.dir}/docs/api
 junit.classes.dir = ./junit.classes
 junit.instrumented-classes.dir = ./junit.instrumented-classes
 resource.dir = ./src/main/resources
-lang.resource.dir = ${resource.dir}/resource
-rules.dir = ./src/main/resources/rules
+lang.resource.dir = ${resource.dir}/org/languagetool/resource
+rules.dir = ./src/main/resources/org/languagetool/rules
 
 ext.dir = ./libs
 ext.ooo.dir = ./libs/ooo
