--- a/trunk/JLanguageTool/build.xml
+++ b/trunk/JLanguageTool/build.xml
@@ -487,7 +487,7 @@
     </target>
 
     <target name="common" depends="clean,init,build">
-        <copy file="${resource.dir}/resource/TrayIcon.png" todir="${dist.dir}/resource/" />
+        <copy file="${resource.dir}/org/languagetool/resource/TrayIcon.png" todir="${dist.dir}/resource/" />
         <filter filtersFile="build.properties" />
 
         <copy file="./README.txt" todir="${dist.dir}" />
