adapt files to resources moved below org.languagetool

--- a/trunk/JLanguageTool/build.properties
+++ b/trunk/JLanguageTool/build.properties
@@ -21,6 +21,7 @@ junit.classes.dir = ./junit.classes
 junit.instrumented-classes.dir = ./junit.instrumented-classes
 resource.dir = ./src/main/resources
 lang.resource.dir = ${resource.dir}/org/languagetool/resource
+lang.dist.dir = ${dist.dir}/org/languagetool/resource
 rules.dir = ./src/main/resources/org/languagetool/rules
 
 ext.dir = ./libs
