--- a/trunk/JLanguageTool/.classpath
+++ b/trunk/JLanguageTool/.classpath
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src/main/java"/>
-	<classpathentry kind="src" path="src/main/resources"/>
 	<classpathentry kind="src" path="src/main/dev"/>
+	<classpathentry kind="src" path="src/test/resources"/>
 	<classpathentry kind="src" path="src/test/java"/>
+	<classpathentry kind="src" path="src/main/resources"/>
+	<classpathentry kind="src" path="src/main/java"/>
+	<classpathentry excluding="test/|dev/|java/|main/java/|main/resources/|main/dev/|test/java/|test/|test/java/|test/|test/resources/|test/java/" kind="src" path="src">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="JLanguageTool/libs"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="src" path="libs/native-lib"/>
 	<classpathentry kind="lib" path="libs/build/junit.jar" sourcepath="C:/Users/user/.m2/repository/junit/junit/4.8.2/junit-4.8.2-sources.jar">
 		<attributes>
