--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/resource/ltcommunity/disabled_rules.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/resource/ltcommunity/disabled_rules.properties
@@ -1,14 +1,11 @@
 # IDs of rules to be disabled for Wikipedia check at
 # http://community.languagetool.org/corpusMatch/list?lang=en
 
-all=UNPAIRED_BRACKETS,UPPERCASE_SENTENCE_START,WORD_REPEAT_RULE,COMMA_PARENTHESIS_WHITESPACE,WHITESPACE_RULE,HUNSPELL_RULE,HUNSPELL_NO_SUGGEST_RULE,WORD_REPEAT_BEGINNING_RULE
+all=UNPAIRED_BRACKETS,UPPERCASE_SENTENCE_START,WORD_REPEAT_RULE,COMMA_PARENTHESIS_WHITESPACE,WHITESPACE_RULE,WORD_REPEAT_BEGINNING_RULE
 
 fr=FRENCH_WHITESPACE
-de=MORFOLOGIK_RULE_DE_DE,BISSTRICH,DE_AGREEMENT,DE_CASE,AUSLASSUNGSPUNKTE,GERMAN_WORD_REPEAT_RULE,ABKUERZUNG_LEERZEICHEN,GERMAN_WORD_REPEAT_BEGINNING_RULE,LEERZEICHEN_RECHENZEICHEN
-pl=MORFOLOGIK_RULE_PL_PL,CUDZYSLOW_DRUKARSKI,BRAK_SPACJI,BRAK_KROPKI,PL_UNPAIRED_BRACKETS
-sl=MORFOLOGIK_RULE_SL_SI,POMIŠLJAJ_1,POMIŠLJAJ_2,POMIŠLJAJ_3
-en=MORFOLOGIK_RULE_EN_GB,MORFOLOGIK_RULE_EN_US,EN_QUOTES,EN_UNPAIRED_BRACKETS
-ca=MORFOLOGIK_RULE_CA_ES,GUIONET_SOLT
-ru=MORFOLOGIK_RULE_RU_RU
-el=MORFOLOGIK_RULE_EL_GR
-nl=MORFOLOGIK_RULE_NL_NL
+de=BISSTRICH,DE_AGREEMENT,DE_CASE,AUSLASSUNGSPUNKTE,GERMAN_WORD_REPEAT_RULE,ABKUERZUNG_LEERZEICHEN,GERMAN_WORD_REPEAT_BEGINNING_RULE,LEERZEICHEN_RECHENZEICHEN
+pl=CUDZYSLOW_DRUKARSKI,BRAK_SPACJI,BRAK_KROPKI,PL_UNPAIRED_BRACKETS
+sl=POMIŠLJAJ_1,POMIŠLJAJ_2,POMIŠLJAJ_3
+en=EN_QUOTES,EN_UNPAIRED_BRACKETS
+ca=GUIONET_SOLT
