[ru] disable RU_UNPAIRED_BRACKETS for community.languagetool.org

--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/resource/ltcommunity/disabled_rules.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/resource/ltcommunity/disabled_rules.properties
@@ -8,4 +8,5 @@ de=BISSTRICH,DE_AGREEMENT,DE_CASE,AUSLASSUNGSPUNKTE,GERMAN_WORD_REPEAT_RULE,ABKU
 pl=CUDZYSLOW_DRUKARSKI,BRAK_SPACJI,BRAK_KROPKI,PL_UNPAIRED_BRACKETS
 sl=POMIŠLJAJ_1,POMIŠLJAJ_2,POMIŠLJAJ_3
 en=EN_QUOTES,EN_UNPAIRED_BRACKETS
+ru=RU_UNPAIRED_BRACKETS
 ca=GUIONET_SOLT
