move test file to resources for Maven compatibility (Sourceforge bug #3574148)

--- a/trunk/JLanguageTool/build.xml
+++ b/trunk/JLanguageTool/build.xml
@@ -192,6 +192,7 @@
             <pathelement location="${dist.dir}/LanguageTool.uno.jar" />
             <pathelement location="${src.test.dir}" />
             <pathelement location="${ext.dir}/native-lib" />
+            <pathelement location="src/test/resources" />
             <path refid="common.classpath" />
         </path>
 
