[pt] add Compound rule

--- a/trunk/JLanguageTool/build.xml
+++ b/trunk/JLanguageTool/build.xml
@@ -617,6 +617,8 @@
         <copy file="${lang.resource.dir}/pl/multiwords.txt" todir="${lang.dist.dir}/pl" />
         <copy file="${lang.resource.dir}/pl/disambiguation.xml" todir="${lang.dist.dir}/pl" />
 
+        <copy file="${lang.resource.dir}/pt/compounds.txt" todir="${lang.dist.dir}/pt" />
+
         <copy file="${lang.resource.dir}/nl/dutch.dict" todir="${lang.dist.dir}/nl" />
         <copy file="${lang.resource.dir}/nl/dutch.info" todir="${lang.dist.dir}/nl" />
         <copy file="${lang.resource.dir}/nl/dutch_synth.dict" todir="${lang.dist.dir}/nl" />
