[ca] Fix some false alarms. Disable more rules for Wikipedia check.

--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/resource/ltcommunity/disabled_rules.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/resource/ltcommunity/disabled_rules.properties
@@ -9,4 +9,4 @@ pl=CUDZYSLOW_DRUKARSKI,BRAK_SPACJI,BRAK_KROPKI,PL_UNPAIRED_BRACKETS
 sl=POMIŠLJAJ_1,POMIŠLJAJ_2,POMIŠLJAJ_3
 en=EN_QUOTES,EN_UNPAIRED_BRACKETS
 ru=RU_UNPAIRED_BRACKETS
-ca=GUIONET_SOLT,EVITA_ACCENTUACIO_VALENCIANA,EVITA_VERBS_VALENCIANS,EVITA_VERBS_BALEARS,EVITA_VERBS_BALEARS_VALENCIANS,EVITA_POSSESSIUS_U,EVITA_PRONOMS_VALENCIANS,DEMOSTRATIUS_ESTE_EIXE,PUNTS_SUSPENSIUS
+ca=GUIONET_SOLT,EVITA_ACCENTUACIO_VALENCIANA,EVITA_VERBS_VALENCIANS,EVITA_VERBS_BALEARS,EVITA_VERBS_BALEARS_VALENCIANS,EVITA_POSSESSIUS_U,EVITA_PRONOMS_VALENCIANS,DEMOSTRATIUS_ESTE,DEMOSTRATIUS_EIXE,PUNTS_SUSPENSIUS
