[uk]  fix broken Ukrainian support - missing .info file

--- a/trunk/JLanguageTool/build.xml
+++ b/trunk/JLanguageTool/build.xml
@@ -631,6 +631,7 @@
         <copy file="${lang.resource.dir}/sv/compounds.txt" todir="${lang.dist.dir}/sv" />
 
         <copy file="${lang.resource.dir}/uk/ukrainian.dict" todir="${lang.dist.dir}/uk" />
+        <copy file="${lang.resource.dir}/uk/ukrainian.info" todir="${lang.dist.dir}/uk" />
         <copy file="${lang.resource.dir}/uk/uk.ngp" todir="${lang.dist.dir}/uk" />
 
         <copy file="${lang.resource.dir}/ru/russian.dict" todir="${lang.dist.dir}/ru" />
