use the same disabled rules for the online Wikipedia check ("WikiCheck") as for the offline check

--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/resource/ltcommunity/disabled_rules.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/resource/ltcommunity/disabled_rules.properties
@@ -1,5 +1,5 @@
 # IDs of rules to be disabled for Wikipedia check at
-# http://community.languagetool.org/corpusMatch/list?lang=en
+# http://community.languagetool.org/corpusMatch and http://www.languagetool.org/wikicheck/
 
 all=UNPAIRED_BRACKETS,UPPERCASE_SENTENCE_START,WORD_REPEAT_RULE,COMMA_PARENTHESIS_WHITESPACE,WHITESPACE_RULE,WORD_REPEAT_BEGINNING_RULE
 
