fix sf bug #3573078  (Tray icon too big sometimes)

--- a/trunk/JLanguageTool/build.xml
+++ b/trunk/JLanguageTool/build.xml
@@ -489,6 +489,7 @@
 
     <target name="common" depends="clean,init,build">
         <copy file="${resource.dir}/org/languagetool/resource/TrayIcon.png" todir="${dist.dir}/org/languagetool/resource" />
+        <copy file="${resource.dir}/org/languagetool/resource/TrayIconSmall.png" todir="${dist.dir}/org/languagetool/resource" />
         <filter filtersFile="build.properties" />
 
         <copy file="./README.txt" todir="${dist.dir}" />
