[nl] add compounds.txt to dist

--- a/trunk/JLanguageTool/build.xml
+++ b/trunk/JLanguageTool/build.xml
@@ -600,6 +600,7 @@
         <copy file="${lang.resource.dir}/nl/dutch_synth.info" todir="${lang.dist.dir}/nl" />
         <copy file="${lang.resource.dir}/nl/dutch_tags.txt" todir="${lang.dist.dir}/nl" />
         <copy file="${lang.resource.dir}/nl/disambiguation.xml" todir="${lang.dist.dir}/nl" />
+        <copy file="${lang.resource.dir}/nl/compounds.txt" todir="${lang.dist.dir}/nl" />
 
         <copy file="${lang.resource.dir}/sv/swedish.info" todir="${lang.dist.dir}/sv" />
         <copy file="${lang.resource.dir}/sv/swedish.dict" todir="${lang.dist.dir}/sv" />
