--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/resource/ltcommunity/disabled_rules.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/resource/ltcommunity/disabled_rules.properties
@@ -4,9 +4,9 @@
 all=UNPAIRED_BRACKETS,UPPERCASE_SENTENCE_START,WORD_REPEAT_RULE,COMMA_PARENTHESIS_WHITESPACE,WHITESPACE_RULE,WORD_REPEAT_BEGINNING_RULE
 
 fr=FRENCH_WHITESPACE
-de=BISSTRICH,DE_AGREEMENT,DE_CASE,AUSLASSUNGSPUNKTE,GERMAN_WORD_REPEAT_RULE,ABKUERZUNG_LEERZEICHEN,GERMAN_WORD_REPEAT_BEGINNING_RULE,LEERZEICHEN_RECHENZEICHEN
+de=BISSTRICH,DE_AGREEMENT,DE_CASE,AUSLASSUNGSPUNKTE,GERMAN_WORD_REPEAT_RULE,ABKUERZUNG_LEERZEICHEN,GERMAN_WORD_REPEAT_BEGINNING_RULE,LEERZEICHEN_RECHENZEICHEN,TYPOGRAFISCHE_ANFUEHRUNGSZEICHEN
 pl=CUDZYSLOW_DRUKARSKI,BRAK_SPACJI,BRAK_KROPKI,PL_UNPAIRED_BRACKETS
 sl=POMIŠLJAJ_1,POMIŠLJAJ_2,POMIŠLJAJ_3
-en=EN_QUOTES,EN_UNPAIRED_BRACKETS
+en=EN_QUOTES,EN_UNPAIRED_BRACKETS,ENGLISH_WORD_REPEAT_BEGINNING_RULE
 ru=RU_UNPAIRED_BRACKETS
 ca=GUIONET_SOLT,EVITA_ACCENTUACIO_VALENCIANA,EVITA_VERBS_VALENCIANS,EVITA_VERBS_BALEARS,EVITA_VERBS_BALEARS_VALENCIANS,EVITA_POSSESSIUS_U,EVITA_PRONOMS_VALENCIANS,DEMOSTRATIUS_ESTE,DEMOSTRATIUS_EIXE,PUNTS_SUSPENSIUS
