[de] disable two rules - just too many false alarms (e.g. from the references section and non-German text)

--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/resource/ltcommunity/disabled_rules.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/resource/ltcommunity/disabled_rules.properties
@@ -4,7 +4,7 @@
 all=UNPAIRED_BRACKETS,UPPERCASE_SENTENCE_START,WORD_REPEAT_RULE,COMMA_PARENTHESIS_WHITESPACE,WHITESPACE_RULE,WORD_REPEAT_BEGINNING_RULE
 
 fr=FRENCH_WHITESPACE
-de=BISSTRICH,DE_AGREEMENT,DE_CASE,AUSLASSUNGSPUNKTE,GERMAN_WORD_REPEAT_RULE,ABKUERZUNG_LEERZEICHEN,GERMAN_WORD_REPEAT_BEGINNING_RULE,LEERZEICHEN_RECHENZEICHEN,TYPOGRAFISCHE_ANFUEHRUNGSZEICHEN
+de=BISSTRICH,DE_AGREEMENT,DE_CASE,AUSLASSUNGSPUNKTE,GERMAN_WORD_REPEAT_RULE,ABKUERZUNG_LEERZEICHEN,GERMAN_WORD_REPEAT_BEGINNING_RULE,LEERZEICHEN_RECHENZEICHEN,TYPOGRAFISCHE_ANFUEHRUNGSZEICHEN,APOSTROPH_S,DE_WORD_COHERENCY
 pl=CUDZYSLOW_DRUKARSKI,BRAK_SPACJI,BRAK_KROPKI,PL_UNPAIRED_BRACKETS
 sl=POMIŠLJAJ_1,POMIŠLJAJ_2,POMIŠLJAJ_3
 en=EN_QUOTES,EN_UNPAIRED_BRACKETS,ENGLISH_WORD_REPEAT_BEGINNING_RULE
