update dependencies, external repo is thus not needed anymore

--- a/trunk/JLanguageTool/pom.xml
+++ b/trunk/JLanguageTool/pom.xml
@@ -39,19 +39,6 @@
         <maven.compiler.target>1.6</maven.compiler.target>
     </properties>
 
-    <repositories>
-        <repository>
-            <id>ukp-oss</id>
-            <url>http://zoidberg.ukp.informatik.tu-darmstadt.de/artifactory/public-releases</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
-
     <build>
         <resources>
             <resource>
@@ -106,7 +93,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>cn.com.cjf</groupId>
+            <groupId>com.google.code</groupId>
             <artifactId>cjftransform</artifactId>
             <version>1.0.1</version>
         </dependency>
@@ -126,9 +113,9 @@
             <version>1.3.1</version>
         </dependency>
         <dependency>
-            <groupId>org.ictclas4j</groupId>
+            <groupId>com.googlecode.ictclas4j</groupId>
             <artifactId>ictclas4j</artifactId>
-            <version>1.0</version>
+            <version>1.0.1</version>
         </dependency>
         <dependency>
             <groupId>net.java.dev.jna</groupId>
