--- a/languagetool-standalone/pom.xml
+++ b/languagetool-standalone/pom.xml
@@ -152,7 +152,20 @@
             <artifactId>language-all</artifactId>
             <version>2.1-SNAPSHOT</version>
         </dependency>
-
+        
+        <dependency>
+            <!-- needed for the dev tools - parsing Wikipedia -->
+            <groupId>org.sweble.wikitext</groupId>
+            <artifactId>swc-engine</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+        <dependency>
+            <!-- needed for the dev tools - parsing Wikipedia -->
+            <groupId>org.sweble.wikitext</groupId>
+            <artifactId>swc-parser-lazy</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+        
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
