move the hunspell libs to its own project - other modules will depend on it

--- a/languagetool-language-modules/de/pom.xml
+++ b/languagetool-language-modules/de/pom.xml
@@ -36,17 +36,6 @@
     </developers>
     
     <build>
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-            </resource>
-            <resource>
-                <directory>libs/native-lib</directory>
-                <includes>
-                    <include>**/*</include>
-                </includes>
-            </resource>
-        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -73,6 +62,11 @@
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>languagetool-core</artifactId>
+            <version>2.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.languagetool</groupId>
+            <artifactId>hunspell-native-libs</artifactId>
             <version>2.1-SNAPSHOT</version>
         </dependency>
 
