--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
     <module>languagetool-gui-commons</module>
     <module>languagetool-standalone</module>
     <module>languagetool-office-extension</module>
+    <module>hunspell-native-libs</module>
   </modules>
 
 </project>
