--- a/languagetool-language-modules/fr/pom.xml
+++ b/languagetool-language-modules/fr/pom.xml
@@ -64,6 +64,11 @@
             <artifactId>languagetool-core</artifactId>
             <version>2.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.languagetool</groupId>
+            <artifactId>hunspell-native-libs</artifactId>
+            <version>2.1-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <!-- see http://stackoverflow.com/questions/174560/sharing-test-code-in-maven#174670 -->
