exclude transitive dependencies which are not needed

--- a/languagetool-core/pom.xml
+++ b/languagetool-core/pom.xml
@@ -135,6 +135,12 @@
             <groupId>org.carrot2</groupId>
             <artifactId>morfologik-fsa</artifactId>
             <version>1.5.4</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.carrotsearch</groupId>
+                    <artifactId>hppc</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.carrot2</groupId>
