--- a/languagetool-language-modules/ja/pom.xml
+++ b/languagetool-language-modules/ja/pom.xml
@@ -69,6 +69,20 @@
             <groupId>com.google.code</groupId>
             <artifactId>lucene-gosen-ipadic</artifactId>
             <version>1.2.1</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.lucene</groupId>
+                    <artifactId>lucene-core</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.solr</groupId>
+                    <artifactId>solr-core</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.solr</groupId>
+                    <artifactId>solr-solrj</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         
         <dependency>
