--- a/languagetool-standalone/pom.xml
+++ b/languagetool-standalone/pom.xml
@@ -99,6 +99,8 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
+                            <classpathLayoutType>custom</classpathLayoutType>
+                            <customClasspathLayout>$${artifact.artifactId}$${dashClassifier?}.$${artifact.extension}</customClasspathLayout>
                         </manifest>
                         <manifestEntries>
                             <!-- as we later unzip the language JARs (see zip.xml), we need to add the top directory to the classpath: -->
@@ -168,12 +170,19 @@
             <artifactId>swc-parser-lazy</artifactId>
             <version>1.1.0</version>
         </dependency>
-        
+
+        <!-- Some tests are used at runtime for rule developers, thus no 'test' scope here: -->
+        <dependency>
+            <!-- see http://stackoverflow.com/questions/174560/sharing-test-code-in-maven#174670 -->
+            <groupId>org.languagetool</groupId>
+            <artifactId>languagetool-core</artifactId>
+            <version>2.1-SNAPSHOT</version>
+            <type>test-jar</type>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.7</version>
-            <scope>test</scope>
         </dependency>
     </dependencies>
 
