move command line classes to its own maven module, so we can have a JAR that has the command line "Main" class as its main class

--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
     <module>languagetool-language-modules/uk</module>
     <module>languagetool-language-modules/all</module>
     <module>languagetool-gui-commons</module>
+    <module>languagetool-commandline</module>
     <module>languagetool-standalone</module>
     <module>languagetool-office-extension</module>
     <module>hunspell-native-libs</module>
