--- a/languagetool-standalone/pom.xml
+++ b/languagetool-standalone/pom.xml
@@ -145,6 +145,11 @@
             <artifactId>languagetool-gui-commons</artifactId>
             <version>2.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.languagetool</groupId>
+            <artifactId>languagetool-commandline</artifactId>
+            <version>2.1-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>org.languagetool</groupId>
