--- a/languagetool-commandline/pom.xml
+++ b/languagetool-commandline/pom.xml
@@ -74,6 +74,13 @@
             <artifactId>language-all</artifactId>
             <version>2.1-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.7</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
