move wikipedia indexing and searching to its own Maven module (had not been active yet after the move to maven but caused large file size due to its dependencies)

--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
     <module>languagetool-standalone</module>
     <module>languagetool-office-extension</module>
     <module>hunspell-native-libs</module>
+    <module>languagetool-wikipedia</module>
   </modules>
 
 </project>
