introduce a main class that can be used to call all the other commands

--- a/languagetool-wikipedia/pom.xml
+++ b/languagetool-wikipedia/pom.xml
@@ -44,7 +44,7 @@
               <configuration>
                 <archive>
                   <manifest>
-                    <mainClass>org.languagetool.dev.index.Indexer</mainClass>
+                    <mainClass>org.languagetool.dev.wikipedia.Main</mainClass>
                   </manifest>
                 </archive>
                 <descriptorRefs>
