use the top pom.xml as a parent pom to avoid property duplication

--- a/languagetool-standalone/pom.xml
+++ b/languagetool-standalone/pom.xml
@@ -2,9 +2,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     
-    <groupId>org.languagetool</groupId>
+    <parent>
+        <groupId>org.languagetool</groupId>
+        <artifactId>languagetool-parent</artifactId>
+        <version>2.1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
+    
     <artifactId>languagetool-standalone</artifactId>
-    <version>2.1-SNAPSHOT</version>
     <url>http://www.languagetool.org</url>
     <name>LanguageTool stand-alone GUI</name>
 
@@ -33,23 +38,6 @@
     </scm>
     -->
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.6</maven.compiler.source>
-        <maven.compiler.target>1.6</maven.compiler.target>
-    </properties>
-
-    <developers>
-        <developer>
-            <name>Daniel Naber</name>
-            <roles><role>Maintainer</role></roles>
-        </developer>
-        <developer>
-            <name>Marcin Miłkowski</name>
-            <roles><role>Maintainer</role></roles>
-        </developer>
-    </developers>
-    
     <build>
         <resources>
             <resource>
