--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,13 @@
   <version>2.1-SNAPSHOT</version>
   <packaging>pom</packaging>
 
+  <properties>
+      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+      <maven.compiler.source>1.6</maven.compiler.source>
+      <maven.compiler.target>1.6</maven.compiler.target>
+      <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
+  </properties>
+    
   <modules>
     <module>languagetool-core</module>
     <module>languagetool-language-modules/en</module>
