--- a/hunspell-native-libs/pom.xml
+++ b/hunspell-native-libs/pom.xml
@@ -4,12 +4,17 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
+
+    <parent>
+        <groupId>org.languagetool</groupId>
+        <artifactId>languagetool-parent</artifactId>
+        <version>2.1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
     
-    <groupId>org.languagetool</groupId>
     <artifactId>hunspell-native-libs</artifactId>
-    <version>2.1-SNAPSHOT</version>
     <url>http://www.languagetool.org</url>
-    <name>Hunspell native libs</name>
+    <name>Hunspell native libs for LanguageTool</name>
 
     <build>
         <resources>
