--- a/languagetool-core/pom.xml
+++ b/languagetool-core/pom.xml
@@ -2,9 +2,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     
-    <groupId>org.languagetool</groupId>
+    <parent>
+        <groupId>org.languagetool</groupId>
+        <artifactId>languagetool-parent</artifactId>
+        <version>2.1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
+    
     <artifactId>languagetool-core</artifactId>
-    <version>2.1-SNAPSHOT</version>
     <url>http://www.languagetool.org</url>
     <name>LanguageTool Style and Grammar Checker Core</name>
     <description>LanguageTool is an Open Source proofreading software for English, French, German, Polish, Romanian, and more than 20 other languages. It finds many errors that a simple spell checker cannot detect like mixing up there/their and it detects some grammar problems.</description>
@@ -33,13 +38,6 @@
         <url>http://languagetool.svn.sourceforge.net/languagetool/trunk/JLanguageTool/</url>
     </scm>
     -->
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.6</maven.compiler.source>
-        <maven.compiler.target>1.6</maven.compiler.target>
-        <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
-    </properties>
 
     <developers>
         <developer>
