--- a/languagetool-gui-commons/pom.xml
+++ b/languagetool-gui-commons/pom.xml
@@ -2,9 +2,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     
-    <groupId>org.languagetool</groupId>
+    <parent>
+        <groupId>org.languagetool</groupId>
+        <artifactId>languagetool-parent</artifactId>
+        <version>2.1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
+    
     <artifactId>languagetool-gui-commons</artifactId>
-    <version>2.1-SNAPSHOT</version>
     <url>http://www.languagetool.org</url>
     <name>LanguageTool common GUI classes</name>
     <description>GUI classes for both stand-alone and LibreOffice/OpenOffice extension use</description>
@@ -18,12 +23,6 @@
     </licenses>
     
     <packaging>jar</packaging>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.6</maven.compiler.source>
-        <maven.compiler.target>1.6</maven.compiler.target>
-    </properties>
 
     <developers>
         <developer>
