--- a/languagetool-office-extension/pom.xml
+++ b/languagetool-office-extension/pom.xml
@@ -2,9 +2,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     
-    <groupId>org.languagetool</groupId>
+    <parent>
+        <groupId>org.languagetool</groupId>
+        <artifactId>languagetool-parent</artifactId>
+        <version>2.1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
+    
     <artifactId>languagetool-office-extension</artifactId>
-    <version>2.1-SNAPSHOT</version>
     <url>http://www.languagetool.org</url>
     <name>LanguageTool LibreOffice/OpenOffice extension</name>
 
@@ -32,13 +37,6 @@
         <url>http://languagetool.svn.sourceforge.net/languagetool/trunk/JLanguageTool/</url>
     </scm>
     -->
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.6</maven.compiler.source>
-        <maven.compiler.target>1.6</maven.compiler.target>
-        <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
-    </properties>
 
     <developers>
         <developer>
