move the server code to its own module - just like the commandline module; this makes sense as it has its own Main class (actually two - we default to the HTTPS one)

--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,7 @@
     <module>languagetool-office-extension</module>
     <module>hunspell-native-libs</module>
     <module>languagetool-wikipedia</module>
+    <module>languagetool-server</module>
   </modules>
 
 </project>
