exclude manually_added.txt because of its size

--- a/languagetool-language-modules/en/pom.xml
+++ b/languagetool-language-modules/en/pom.xml
@@ -35,6 +35,14 @@
     </developers>
     
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <excludes>
+                    <exclude>org/languagetool/resource/en/manually_added.txt</exclude>
+                </excludes>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
