[en] exclude more files in the build

--- a/languagetool-language-modules/en/pom.xml
+++ b/languagetool-language-modules/en/pom.xml
@@ -40,6 +40,10 @@
                 <directory>src/main/resources</directory>
                 <excludes>
                     <exclude>org/languagetool/resource/en/manually_added.txt</exclude>
+                    <exclude>org/languagetool/resource/en/partlycountable.txt</exclude>
+                    <exclude>org/languagetool/resource/en/uncountable.txt</exclude>
+                    <exclude>org/languagetool/resource/en/filter*.txt</exclude>
+                    <exclude>org/languagetool/resource/en/*.awk</exclude>
                 </excludes>
             </resource>
         </resources>
